Switch hosting examples to cPanel and React/Vite web flow

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,6 @@ theme:
   logo: assets/applogo/android-chrome-512x512.png
   favicon: assets/favicon/favicon.ico
   features:
-    - navigation.tabs
     - navigation.sections
     - navigation.expand
     - navigation.top
@@ -39,14 +38,14 @@ theme:
     - content.code.copy
   palette:
     - scheme: default
-      primary: indigo
-      accent: indigo
+      primary: cyan
+      accent: cyan
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
     - scheme: slate
-      primary: indigo
-      accent: indigo
+      primary: cyan
+      accent: cyan
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
