--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,6 @@ site_name: MegaClassify Documentation
 site_url: https://megzedhq.github.io/megaclassify-docs/
 site_description: Official documentation portal for MegaClassify
 site_author: Megzed
-repo_name: megzedhq/megaclassify-docs
-repo_url: https://github.com/megzedhq/megaclassify-docs
 edit_uri: ""
 
 nav:
@@ -36,20 +34,23 @@ theme:
     - search.suggest
     - search.highlight
     - content.code.copy
+
   palette:
+    # Light mode
     - scheme: default
-      primary: cyan
-      accent: cyan
+      primary: blue
+      accent: blue
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
+
+    # Dark mode
     - scheme: slate
-      primary: cyan
-      accent: cyan
+      primary: blue
+      accent: blue
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
-
 
 markdown_extensions:
   - admonition
@@ -64,10 +65,7 @@ markdown_extensions:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
-
-
 extra_css:
   - assets/stylesheets/extra.css
-
 
 copyright: Copyright © Megzed. All rights reserved.
